crates/biome_cli/tests/snapshots/main_cases_reporter_summary/reports_diagnostics_summary_check_verbose_command_destination.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --reporter=summary --reporter-file=file.txt --verbose main.ts index.ts index.css
```

## `file.txt`

```txt
reporter/parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ℹ The following files have parsing errors:
  
  - index.css
  
reporter/format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ℹ The following files need to be formatted:
  
  - index.css
  - index.ts
  - main.ts
  
reporter/violations ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ℹ Some lint rules or assist actions reported some violations.
  
  ℹ The following files have violations:
  
  - index.css (2 errors)
  - index.ts (21 errors, 8 warnings)
  - main.ts (21 errors, 8 warnings)
  
  ℹ The following lint rules have violations:
  
  Rule Name                                        Diagnostics
  
  lint/correctness/noUnusedVariables               12 (12 warnings)
  lint/correctness/noUnknownFunction               2 (2 errors)
  lint/suspicious/noImplicitAnyLet                 12 (12 errors)
  lint/correctness/noUnusedImports                 4 (4 warnings)
  lint/suspicious/noDoubleEquals                   8 (8 errors)
  assist/source/organizeImports                    2 (2 errors)
  lint/suspicious/noRedeclare                      12 (12 errors)
  lint/suspicious/noDebugger                       8 (8 errors)
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ℹ Files processed:
  
  - index.css
  - index.ts
  - main.ts
  
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ℹ Files fixed:
  
  ⚠ The list is empty.
  
Scanned project folder in <TIME>.
Checked 3 files in <TIME>. No fixes applied.
Found 48 errors.
Found 16 warnings.
```

## `index.css`

```css
.brokenStyle {
  color: f(
}

.style {
  color: fakeFunction();
}
```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```
